[tool.poetry]
name = "tauri-client-book"
version = "0.1.0"
description = "Sphinx build toolchain for a Chinese book about Tauri + Rust client architecture"
authors = ["Walter Fan"]
license = "CC-BY-SA-4.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
Sphinx = "~=8.1"
myst-parser = "~=4.0"
sphinx-rtd-theme = "~=3.0"
sphinx-copybutton = "~=0.5"
sphinx-design = "~=0.6"
sphinxcontrib-mermaid = "~=1.0"

[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "~=2024.10"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

